[project]
name = "clab-terminal-launcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "dotenv>=0.9.9",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]

[project.scripts]
clab-terminal-launcher = "main:main"
